--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ runpod = "^1.7.0"
 librosa = ">=0.10.2.post1,<0.11.0"
 soundfile = "^0.12.1"
 openai = "^1.42.0"
-numpy = ">=1.20.3,<1.22.0"
+numpy = "^1.22.0"
 
 
 
